compilateurDeca/src/test/deca/context/valid/objet/sous_typage.deca
// Description:
//    Test de contexte : affectation compatible (sous-type).
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 13/01/2026

class A {}
class B extends A {}

{
    A a;
    B b = new B();
    a = b;
    a = null;
}